--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "babel-loader": "^8.0.5",
     "babel-preset-es2015": "^6.24.1",
     "css-loader": "^2.1.0",
+    "file-loader": "^3.0.1",
+    "image-webpack-loader": "^4.6.0",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
