--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --open --mode development",
+    "start": "webpack-dev-server --open",
     "build": "webpack -p"
   },
   "devDependencies": {
@@ -13,16 +13,20 @@
     "babel-preset-es2015": "^6.24.1",
     "css-loader": "^2.1.0",
     "file-loader": "^3.0.1",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^4.6.0",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
+    "terser-webpack-plugin": "^1.4.1",
     "webpack": "^4.29.5",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.2.1"
   },
   "dependencies": {
     "@babel/core": "^7.3.4",
+    "jquery": "3.3.1",
     "whatwg-fetch": "^3.0.0"
   }
 }
